[project]
readme = "README.md"
name = "life_expectancy"
version = "0.1.0"
dependencies = ["pandas"]
requires-python = ">=3.8"
description = "First assignment of the Foundations Learning Path"
authors = [
    {name = "SamirV<samvadd@gmail.com>"}
]

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov", "toml"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["life_expectancy"]